--- a/Index.html
+++ b/Index.html
@@ -10,14 +10,13 @@
     <div class="container">
         <h1>Juego de Problemas Aritméticos</h1>
         <div class="problema"></div>
-        <input type="number" id="answer" placeholder="Escribe tu respuesta">
+        <input type="number" id="respuesta" placeholder="Escribe tu respuesta">
         <button onclick="checkAnswer()">Comprobar</button>
-        <div id="result"></div>
+        <div id="resultado"></div>
         <hr>
         <p>&copy;Todos los Derechos Reservados</p>
         <p>X-PunPun</p>
     </div>
     <script src="JS/script.js"></script>
-
 </body>
 </html>
